--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,67 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  background-image: var(--header-background-image);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  font-family: "IBM Plex mono", "Arial", sans-serif;;
+}
+
+
+.header {
+  position: relative;
+  padding: 10px;
+  block-size: 100vh;
+}
+
+.lamp {
+  position: absolute;
+  top: 10px;
+  right: 19px;  
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.lamp::before {
+  content: "REC";
+  font-size: var(--menu-text-size);
+  line-height: 139%;
+  color: var(--menu-color);
+}
+
+.lamp::after {
+  content: "";
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  background-color: var(--menu-color);
+  box-shadow: 0px 0px 4px 2px var(--menu-color);
+}
+
+.decorated-zone::before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border-top: 1px solid var(--menu-color);
+  border-right: 1px solid var(--menu-color);
+  inline-size: 25px;
+  block-size: 25px;
+}
+
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
+  border-left: 1px solid var(--menu-color);
+  border-bottom: 1px solid var(--menu-color);
+  inline-size: 25px;
+  block-size: 25px;
 }
