--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,5 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root {
+  --header-background-image:  url('../images/cover-image-dark.png');
+  --menu-color: #ff0070;
+  --menu-text-size: 18px;
+}
