--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,8 +1,10 @@
 :root {
   --header-background-image:  url('../images/cover-image-dark.png');
-  --menu-color: #FF0070;
-  --menu-color-transparent: #FF007066;
-  --menu-text-size: 18px;
-  --header-font-color: #DB00FF;
   --accent-color: #FF0070;
+  --menu-color: var(--accent-color);
+  --focus-color: #DB00FF;
+  --menu-color-transparent: #FF007066;
+  --group-title-color: var(--accent-color);
+  --article-title-color: #000028;
+  --article-content-color: #F1B2CE;
 }
