--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,16 +1,10 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
-}
-
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+  --header-background-image:  url('../images/cover-image-dark.png');
+  --accent-color: #FF0070;
+  --menu-color: var(--accent-color);
+  --focus-color: #DB00FF;
+  --menu-color-transparent: #FF007066;
+  --group-title-color: var(--accent-color);
+  --article-title-color: #000028;
+  --article-content-color: #F1B2CE;  
 }
