--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,3 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
   display: flex;
   flex-direction: column;
@@ -9,16 +7,19 @@
   background-size: cover;
   background-attachment: fixed;
   font-family: "IBM Plex mono", "Arial", sans-serif;
-  font-weight: 700;
 }
 
-.header {
+.header,
+.footer {
   position: relative;
   padding: 10px;
   block-size: 100vh;
   display: grid;
+  align-items: center;  
+}
+
+.header {
   grid-template-rows: 1fr min-content 1fr;
-  align-items: center;
 }
 
 .lamp {
@@ -47,26 +48,26 @@
   box-shadow: 0px 0px 4px 2px var(--menu-color);
 }
 
-.decorated-zone::before {
+.decorated-zone::before,
+.decorated-zone::after {
   content: "";
   position: absolute;
+  inline-size: 25px; 
+  block-size: 25px; 
+}
+
+.decorated-zone::before {
   top: 10px;
   right: 10px;
   border-top: 1px solid var(--menu-color);
   border-right: 1px solid var(--menu-color);
-  inline-size: 25px;
-  block-size: 25px;
 }
 
 .decorated-zone::after {
-  content: "";
-  position: absolute;
   left: 10px;
   bottom: 10px;
   border-left: 1px solid var(--menu-color);
   border-bottom: 1px solid var(--menu-color);
-  inline-size: 25px;
-  block-size: 25px;
 }
 
 .header__theme-menu-list {
@@ -88,14 +89,17 @@
   line-height: 100%;
   min-width: 70px;
   min-height: 26px;
+  text-transform: lowercase;
+  cursor: pointer;
 }
 
 .header__theme-menu-button_active {
-  border: 1px solid var(--menu-color);
+  outline: 1px solid var(--menu-color);
+  pointer-events: none;
 }
 
 .header__theme-menu-button:hover {
-  border: 1px solid var(--menu-color-transparent);
+  outline: 1px solid var(--menu-color-transparent);
 }
 
 .header__theme-menu-button:focus {
@@ -103,13 +107,16 @@
 }
 
 .header__theme-menu-button:focus-visible {
-  border-bottom: 1px solid var(--menu-color);
+  outline: 1px solid var(--menu-color);
 }
 
-.header__title {
+.title {
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   line-height: 83%;
   color: var(--focus-color);
+}
+
+.header__title {
   text-shadow: 4px 4px 0 var(--accent-color);
   align-self: center;
   justify-self: start;
@@ -117,7 +124,9 @@
 
 .header__description {
   font-size: 18px;
+  font-weight: 700;
   line-height: 130%;
+  color: var(--article-title-color);
 }
 
 .title-decor {
@@ -140,6 +149,7 @@
 .group__title {
   color: var(--group-title-color);
   font-size: 18px;
+  line-height: 130%;
 }
 
 .content {
@@ -158,6 +168,7 @@
   color: var(--article-title-color);
   background-color: var(--accent-color);
   font-size: 18px;
+  line-height: 130%;
 }
 
 .article__subtitle {
@@ -165,6 +176,7 @@
   background-color: var(--accent-color);
   font-size: 18px;
   font-weight: 400;
+  line-height: 130%;
 }
 
 .article__content {
@@ -198,27 +210,19 @@
 }
 
 .image {
+  display: block;  
   object-fit: cover;
   inline-size: 100%;
   block-size: 100%;
 }
 
-
 .footer {
-  position: relative;
-  padding: 10px;
-  height: 100vh;
-  display: grid;
-  align-items: center;
+
   justify-items: center;
 }
 
 .footer__title {
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  line-height: 83%;
-  color: var(--focus-color);
   text-shadow: 2px 2px 0px var(--accent-color);
-
 }
 
 @media (width >= 768px) {
@@ -231,8 +235,7 @@
     padding-right: 0px;
   }
 
-  .header__title,
-  .footer__title {
+  .title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
   
@@ -263,19 +266,22 @@
  
   .main {
     gap: 80px;
+    margin: 0px;
   }
 
   .group {
-    padding: 0px 10px;
+    padding: 0px 20px;
   }
 
-  .group_why,
-  .group_how {
+  .group_text {
     display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: 20px;
+    grid-template-columns: 1fr 66%;
   }
 
+  .group_what .content {
+    grid-column: span 2;
+  }
+  
   .article__images {
     gap: 20px;
   }
@@ -317,10 +323,6 @@
 
   .header__description {
     max-width: 491px;
-  }
-
-  .group_what .group__title {
-    max-width: 34vh;
   }
 
   .group_what .content {
